--- a/index.html
+++ b/index.html
@@ -10,50 +10,50 @@
 	</head>
 	<body onload="initGame();">
 		<header>
-			<h1>Kardashev Incremental</h1>
+			<h1>卡爾達肖夫增量</h1>
 			<p><a href="https://github.com/AdrienJaguenet/Kardashev">Github repo</a></p>
-			<h2>Civilisation level: <span id="civ-level">0</span></h2>
+			<h2>文明級數: <span id="civ-level">0</span></h2>
 		</header>
 		<div id="tab-select">
-			<div class="tab-btn" id="tab-overview" onclick="select_tab('overview');">Overview</div>
-			<div class="tab-btn" id="tab-buildings" onclick="select_tab('buildings');">Buildings</div>
-			<div class="tab-btn" id="tab-techs" onclick="select_tab('techs');">Technologies</div>
-			<div class="tab-btn" id="tab-upgrades" onclick="select_tab('upgrades');">Upgrades</div>
+			<div class="tab-btn" id="tab-overview" onclick="select_tab('overview');">概要</div>
+			<div class="tab-btn" id="tab-buildings" onclick="select_tab('buildings');">建築物</div>
+			<div class="tab-btn" id="tab-techs" onclick="select_tab('techs');">科技</div>
+			<div class="tab-btn" id="tab-upgrades" onclick="select_tab('upgrades');"升級</div>
 		</div>
 		<div id="content">
 				<p>t: <span id="stat-year">0</span></p>
 				<div id="stat-energy" class="stats">
-					<span class="stat-name" id="energy-name">Energy: </span>
+					<span class="stat-name" id="energy-name">能量: </span>
 					<span class="stat-qty" id="stat-energy-qty">0</span><br/>
 					<span class="stat-delta" id="energy-delta">0</span>
 				</div>
 				<div id="stat-bits" class="stats">
-					<span class="stat-name" id="bits-name">Information: </span>
+					<span class="stat-name" id="bits-name">資訊: </span>
 					<span class="stat-qty" id="stat-bits-qty">0</span><br/>
 					<span class="stat-delta" id="bits-delta">0</span>
 				</div>
 				<div id="stat-wood" class="stats">
-					<span class="stat-name" id="wood-name">Wood: </span>
+					<span class="stat-name" id="wood-name">木材: </span>
 					<span class="stat-qty" id="stat-wood-qty">0</span><br/>
 					<span class="stat-delta" id="wood-delta">0</span>
 				</div>
 				<div id="controls-activities">
-					<button id="manual-hunt" onclick="activity('hunt')">Hunt (
+					<button id="manual-hunt" onclick="activity('hunt')">狩獵 (
 						<span class="gain-qty" id="hunt-qty">0</span>
 						)</button>
-					<button id="manual-gather" onclick="activity('gather')">Gather (
+					<button id="manual-gather" onclick="activity('gather')">收集 (
 						<span class="gain-qty" id="gather-qty">0</span>
 						)</button>
-					<button id="manual-observe" onclick="activity('observe')">Observe your surroundings (
+					<button id="manual-observe" onclick="activity('observe')">觀察周圍 (
 						<span class="gain-qty" id="observe-qty">0</span>
 						)</button>
-					<button id="manual-fish" onclick="activity('fish')">Fish (
+					<button id="manual-fish" onclick="activity('fish')">釣魚 (
 						<span class="gain-qty" id="fish-qty">0</span>
 						)</button>
-					<button id="manual-farming" onclick="activity('farming')">Farm (
+					<button id="manual-farming" onclick="activity('farming')">種植 (
 						<span class="gain-qty" id="farming-qty">0</span>
 						)</button>
-					<button id="manual-stargaze" onclick="activity('stargaze')">Observe the stars (
+					<button id="manual-stargaze" onclick="activity('stargaze')">觀星 (
 						<span class="gain-qty" id="stargaze-qty">0</span>
 						)</button>
 				</div>
@@ -63,7 +63,7 @@
 				<h2>Buildings</h2>
 				<table id="buildings-table">
 					<th>
-						<td>No. Owned</td><td>Cost</td><td>Effect</td><td></td>
+						<td>擁有數量</td><td>成本</td><td>效果</td><td></td>
 					</th>
 				</table>
 			</div>
@@ -71,7 +71,7 @@
 			<h2> Technologies </h2>
 				<table id="technologies-table">
 					<th>
-						<td>Cost</td><td>Effect</td><td></td>
+						<td>成本</td><td>效果</td><td></td>
 					</th>
 				</table>
 			</div >
@@ -79,14 +79,14 @@
 			<h2> Upgrades </h2>
 				<table id="upgrades-table">
 					<th>
-						<td>Level</td><td>Cost</td><td>Effect</td><td></td>
+						<td>等級</td><td>成本</td><td>效果</td><td></td>
 					</th>
 				</table>
 			</div>
 		</div>
 		<footer>
-			<p>Game doesn't work? It might have been broken by some update. Try removing the local data and reload the page. 
-			<button onclick="localStorage.removeItem('gameState');">RESET</button></p>
+			<p>遊戲不能運作？它可能被一些更新壞了。嘗試移除本地數據，然後重新加載頁面。 
+			<button onclick="localStorage.removeItem('gameState');">重置</button></p>
 			<p>&copy;2019 Adrien Jaguenet</p>
 		</footer>
 	</body>
