--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Kardashev Incremental</title>
+		<title>卡爾達肖夫增量</title>
 		<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 		<script src="ui.js"/></script>
 		<script src="gamedefs.js"/></script>
